--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Drop-down menu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<script defer src="main.js"></script></head>
+</head>
 
 <body>
     <main>
